--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
 button {
 	padding: 1%;
 	margin: 1%;
+
 }
 
 form#player-form  {
@@ -28,6 +29,7 @@ label {
 
 .item {
 	text-align: center;
+	background-color: #006666;
 }
 
 div#player-holder {
@@ -36,4 +38,11 @@ div#player-holder {
 
 div.container {
 	background-color: teal;
+	width: 100%;
+	height: 100%;
+}
+
+img.gif {
+	border-style: solid;
+	border-width: 10px 10px 10px 20px;
 }
